<resources>
    <string name="app_name">智能服装</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="phone">请输入您的电话号码</string>
    <string name="password">请输入您的密码</string>
    <string name="waistline">请输入您的腰围</string>
    <string name="bust">请输入您的胸围</string>
    <string name="hight">请输入您的身高</string>
    <string name="weight">请输入您的体重</string>
    <string name="size_insert">尺寸插入成功</string>
    <string name="use_third_account">第三方账号登录</string>
    <string name="create_infm_account">创建账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="no_install_wechat">未安装微信</string>
    <string name="no_install_qq">未安装QQ</string>
    <string name="tip_loging">登录中...</string>
    <string name="tip_begin_oauth">开始授权...</string>
    <string name="tip_login_fail">登录失败</string>
    <string name="oauth_fail">授权失败</string>
    <string name="oauth_cancle">授权取消</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="tip_account_empty">请输入您的手机号或邮箱地址</string>
    <string name="tip_bust_empty">请输入您的腰围</string>
    <string name="tip_waistline_empty">请输入您的胸围</string>
    <string name="tip_hight_empty">请输入您的身高</string>
    <string name="tip_weight_empty">请输入您的体重</string>
    <string name="tip_account_regex_not_right">手机号格式不正确</string>
    <string name="tip_account2_regex_not_right">手机号或密码不正确</string>
    <string name="tip_password_can_not_be_empty">密码不能为空</string>
    <string name="xiaowu">IT_xiao小巫</string>
    <string name="user_rule">用户协议</string>
    <string name="create_account">创建账号</string>
    <string name="change_size">录入尺寸</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="count_down">%ss</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空</string>
    <string name="tip_please_input_code">请输入验证码</string>
    <string name="tip_please_input_6_32_password">请输入6-32个密码</string>
    <string name="reset_pwd">重置密码</string>

    <string name="act_home_top_scan">扫一扫</string>
    <string name="act_home_top_msg">消息</string>
    <string name="act_home_bottom_shouye">首页</string>
    <string name="act_home_bottom_we">微淘</string>
    <string name="act_home_bottom_ask">问大家</string>
    <string name="act_home_bottom_shop_car">购物车</string>
    <string name="act_home_bottom_my">我的淘宝</string>
    <string name="frag_we_search">搜索</string>
    <string name="payStr">注：收款方为第三方支付服务商，(付款成功后，将由开发商对其进行管理)。如有问题，请联系（客服：18600434760）></string>
</resources>
