<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:padding="20dp"
        android:src="@mipmap/ic_login_cancle_normal" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/iv_cancel"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:background="@android:color/white"
        android:layout_below="@+id/iv_logo" >
        <com.clothes.login.views.CleanEditText
            android:id="@+id/et_bust"
            style="@style/login_edit_style"
            android:layout_marginTop="0.5dp"
            android:ems="10"
            android:hint="@string/bust"
            android:inputType="textPassword" />


    </RelativeLayout>

    <com.clothes.login.views.CleanEditText
        android:id="@+id/et_waistline"
        style="@style/login_edit_style"
        android:layout_below="@+id/layout_phone"
        android:layout_marginTop="0.5dp"
        android:ems="10"
        android:hint="@string/waistline"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_change_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login_selector"
        android:layout_below="@+id/et_waistline"
        android:onClick="onClick"
        android:text="@string/change_size"
        android:textColor="#5c5c5c"
        android:textSize="16sp" />

</RelativeLayout>