<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8" >

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:padding="20dp"
        android:src="@mipmap/ic_login_cancle_normal" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/iv_cancel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:padding="20dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_marginTop="60dp"
        android:orientation="vertical" >

        <com.clothes.login.views.CleanEditText
            android:id="@+id/et_email_phone"
            style="@style/login_edit_style"
            android:hint="@string/phone"
            android:inputType="textEmailAddress"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#f8f8f8" />

        <com.clothes.login.views.CleanEditText
            android:id="@+id/et_password"
            style="@style/login_edit_style"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="onClick"
        android:text="@string/login"
        android:textColor="#5c5c5c"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tv_create_account"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/create_infm_account"
            android:textColor="#5c5c5c"
            android:textSize="12sp" />

        <!--<View-->
            <!--android:id="@+id/seprate"-->
            <!--android:layout_width="0.5dp"-->
            <!--android:layout_height="15dp"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:background="#5c5c5c" />-->

        <!--<TextView-->
            <!--android:id="@+id/tv_forget_password"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_toRightOf="@id/seprate"-->
            <!--android:clickable="true"-->
            <!--android:onClick="onClick"-->
            <!--android:text="@string/forget_password"-->
            <!--android:textColor="#5c5c5c"-->
            <!--android:textSize="12sp" />-->
    </RelativeLayout>

</RelativeLayout>