<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:padding="20dp"
        android:src="@mipmap/ic_login_cancle_normal" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/iv_cancel"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:background="@android:color/white"
        android:layout_below="@+id/iv_logo" >

        <com.clothes.login.views.CleanEditText
            android:id="@+id/et_phone"
            style="@style/login_edit_style"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="11" >

            <requestFocus />
        </com.clothes.login.views.CleanEditText>

    </RelativeLayout>

    <com.clothes.login.views.CleanEditText
        android:id="@+id/et_password"
        style="@style/login_edit_style"
        android:layout_below="@+id/layout_phone"
        android:layout_marginTop="0.5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <com.clothes.login.views.CleanEditText
        android:id="@+id/hight"
        style="@style/login_edit_style"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hight"
        android:inputType="textEmailAddress" />
    <com.clothes.login.views.CleanEditText
        android:id="@+id/weight"
        style="@style/login_edit_style"
        android:layout_below="@+id/hight"
        android:layout_marginTop="0.5dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="textEmailAddress" />
    <!--<com.clothes.login.views.CleanEditText-->
        <!--android:id="@+id/et_nickname"-->
        <!--style="@style/login_edit_style"-->
        <!--android:layout_below="@+id/et_password"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:maxLength="32"-->
        <!--android:singleLine="true"-->
        <!--android:hint="昵称"-->
        <!--android:inputType="text" />-->

    <com.clothes.login.views.CleanEditText
        android:id="@+id/verify"
        style="@style/login_edit_style"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/hight"
        android:layout_alignRight="@+id/hight"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="522dp"
        android:layout_marginEnd="205dp"
        android:layout_marginRight="205dp"
        android:ems="10"
        android:hint="请输入验证码"
        android:inputType="textEmailAddress" />

    <com.clothes.login.views.CleanEditText
        android:id="@+id/burndate"
        style="@style/login_edit_style"
        android:layout_width="411dp"
        android:layout_height="47dp"
        android:layout_alignEnd="@+id/hight"
        android:layout_alignRight="@+id/hight"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="467dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:ems="10"
        android:hint="请输入您的出生日期"
        android:inputType="textEmailAddress" />

    <com.clothes.login.views.CleanEditText
        android:id="@+id/gender"
        style="@style/login_edit_style"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/weight"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:hint="请输入您的性别"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/burndate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="onClick"
        android:text="@string/create_account"
        android:textColor="#5c5c5c"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_create_account2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/weight"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="237dp"
        android:layout_marginLeft="237dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="onClick"
        android:text="发送验证码"
        android:textColor="#5c5c5c"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@+id/btn_create_account"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="59dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="点击“创建账号”即同意" />

        <TextView
            android:id="@+id/tv_user_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/user_rule"
            android:textColor="#5c5c5c"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>